[gd_scene load_steps=4 format=3 uid="uid://b5hqeoy2l1kyb"]

[ext_resource type="Texture2D" uid="uid://bj7o4tqqc7eyt" path="res://assets/sprites.png" id="1_ht6s1"]
[ext_resource type="Script" path="res://scripts/ship.gd" id="1_idjxp"]
[ext_resource type="PackedScene" uid="uid://v1vlf1nhjpi2" path="res://scenes/entities/bullet.tscn" id="2_xduei"]

[node name="Ship" type="CharacterBody2D"]
script = ExtResource("1_idjxp")
bullet = ExtResource("2_xduei")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ht6s1")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(11, 3)
polygon = PackedVector2Array(-11, -11, -11, -11, -3, 5, -19, 5)

[node name="ShotPt2" type="Node2D" parent="."]
position = Vector2(0, -8)
rotation = -0.401426

[node name="ShotPt" type="Node2D" parent="."]
position = Vector2(0, -8)

[node name="ShotPt3" type="Node2D" parent="."]
position = Vector2(0, -8)
rotation = 0.401426
scale = Vector2(1, 1)

[node name="ShootTimeout" type="Timer" parent="."]

[connection signal="timeout" from="ShootTimeout" to="." method="_on_shoot_timeout_timeout"]
